# Backtest

./: .gitignore  AGENTS.md  ANALYSIS_BACKTEST_REPOSITORY.md  CLAUDE.md  GEMINI.md  Makefile  PLANS.MD  README.md  RESEARCH_PLAYBOOK.md  RUNBOOK.md  agents.md  atlas_links.json  audit_report.md  check_diagnostics.py  claim_test_map.csv  complete-plan.md.txt  convert_to_parquet.py  dbg.py  debug2.txt  debug_candidates.py  debug_features.py  debug_parquet.py  diag_out.txt  engineering_backlog.md  find_missing_args.py  fragments (1).jsonl  fragments.jsonl  gap_matrix.md  handoff_report.txt  knowledge_atlas.json  knowledge_atlas.md  literature-ingestion.skill  nohup.out  paper_cards.json  patch_plan.txt  pytest.ini  report_requirements.md  requirements.txt  research_backlog.csv  run_condition_certification.py  (+4 more)
project/: Makefile  README.md  pyproject.toml  requirements.txt  tr.py
project/analyzers/: __init__.py
project/configs/: pipeline.yaml  portfolio.yaml  portfolio_research.yaml  tuning_relaxed.yaml
project/engine/: exchange_constraints.py  execution_model.py  kill_switches.py  monitoring.py  pnl.py  risk_allocator.py  runner.py
project/eval/: ablation.py  benchmarks.py  cost_model.py  debug_microstructure.py  microstructure_acceptance.py  microstructure_calibration.py  multiplicity.py  performance_attribution.py  redundancy.py  robustness.py  selection_bias.py  state_acceptance.py
project/events/: __init__.py  phase2.py  registry.py
project/features/: __init__.py  context_states.py  funding_persistence.py  liquidity_vacuum.py  microstructure.py  vol_regime.py  (+1 more)
(+2714 files in other folders)
